"""create user table

Revision ID: d4bf49562258
Revises: 
Create Date: 2024-09-19 01:55:55.974501

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = 'd4bf49562258'
down_revision: Union[str, None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.execute("CREATE SCHEMA IF NOT EXISTS users")
    op.create_table('user',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('name', sa.String(length=256), nullable=False),
    sa.Column('username', sa.String(length=256), nullable=False),
    sa.Column('email', sa.String(length=256), nullable=False),
    sa.Column('phone', sa.String(length=20), nullable=True),
    sa.Column('password', sa.String(length=256), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email'),
    sa.UniqueConstraint('username'),
    schema='users'
    )
    op.create_index('idx_user_email', 'user', ['email'], unique=True, schema='users')
    op.create_index('idx_user_name', 'user', ['name'], unique=False, schema='users')
    op.create_index(op.f('ix_users_user_id'), 'user', ['id'], unique=False, schema='users')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_users_user_id'), table_name='user', schema='users')
    op.drop_index('idx_user_name', table_name='user', schema='users')
    op.drop_index('idx_user_email', table_name='user', schema='users')
    op.drop_table('user', schema='users')
    op.execute("DROP SCHEMA IF EXISTS users CASCADE")
    # ### end Alembic commands ###
