"""create auth token table

Revision ID: 1ec3a92562a6
Revises: cf23cb64a238
Create Date: 2024-09-19 01:59:38.618626

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa
from sqlalchemy.dialects import postgresql

# revision identifiers, used by Alembic.
revision: str = '1ec3a92562a6'
down_revision: Union[str, None] = 'cf23cb64a238'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('auth_token',
    sa.Column('id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.Column('user_id', postgresql.UUID(as_uuid=True), nullable=False),
    sa.Column('token', sa.String(length=512), nullable=False),
    sa.Column('token_hash', sa.String(length=256), nullable=False),
    sa.Column('valid_till', sa.DateTime(), nullable=False),
    sa.Column('is_active', sa.Boolean(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.user.id'], ),
    sa.PrimaryKeyConstraint('id'),
    schema='users'
    )
    op.create_index('idx_auth_token_token_hash', 'auth_token', ['token_hash'], unique=True, schema='users')
    op.create_index('idx_auth_token_user_id', 'auth_token', ['user_id'], unique=False, schema='users')
    op.create_index(op.f('ix_users_auth_token_id'), 'auth_token', ['id'], unique=False, schema='users')
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index(op.f('ix_users_auth_token_id'), table_name='auth_token', schema='users')
    op.drop_index('idx_auth_token_user_id', table_name='auth_token', schema='users')
    op.drop_index('idx_auth_token_token_hash', table_name='auth_token', schema='users')
    op.drop_table('auth_token', schema='users')
    # ### end Alembic commands ###
